--- a/index.html
+++ b/index.html
@@ -1,41 +1,66 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
-    <style>
-      .text-wrapper-6 {
-        background: none;
-        border: none;
-        cursor: pointer;
-        
-      }
-    </style>
   </head>
   <body>
-    <div class="frame">
+    <div class="template">
       <div class="div">
-        <div class="overlap-group">
-          <div class="rectangle"></div>
-          <img class="logo" src="./img2/logo.png" />
-        </div>
         <div class="overlap">
-          <div class="text-wrapper">Template Pomodoro.</div>
+          <div class="rectangle"></div>
+          <img class="logo" src="./img/logo.png" />
+          <div class="text-wrapper">Perfil</div>
+          <div class="text-wrapper-2">Timer</div>
+          <div class="text-wrapper-3">Tarefas</div>
+          <div class="text-wrapper-4">Notas</div>
+          <div class="text-wrapper-5">Estatísticas</div>
+        </div>
+        <div class="overlap-group">
+          <div class="text-wrapper-6">Swift Focus</div>
           <div class="overlap-2">
             <p class="p">alcance mais em menos tempo</p>
             <div class="maximize-seu-foco">Maximize seu foco</div>
           </div>
+          <div class="text-wrapper-7">Tarefas</div>
+          <div class="overlap-3">
+            <div class="frame">
+              <div class="text-wrapper-8">Task 0</div>
+              <div class="text-wrapper-9">Task 1</div>
+              <div class="text-wrapper-9">Task 2</div>
+              <div class="text-wrapper-9">Task 3</div>
+              <div class="text-wrapper-9">Task 4</div>
+            </div>
+            <img class="Polygon_relogio" src="./img/Polygon_relogio.png" />
+            <img class="clock" src="./img/clock.png" />
+          </div>
         </div>
-        <p class="text-wrapper-2">Faça login no Swift Focus</p>
-        <div class="digite-seu-email-wrapper"><div class="text-wrapper-3">Digite seu email</div></div>
-        <div class="digite-sua-senha-wrapper"><div class="text-wrapper-3">Digite sua senha</div></div>
-        <div class="text-wrapper-4">Esqueceu a senha?</div>
-        <div class="text-wrapper-5">Não tenho uma conta</div>
-        <div class="div-wrapper"><button class="text-wrapper-6">Acessar</button></div>
-        <img class="user" src="./img2/user.png" />
-        <img class="lock" src="./img2/lock.png" />
-        <p class="text-wrapper-7">Inicie sessão e otimize seu foco</p>
+        <div class="text-wrapper-10">Estatísticas</div>
+        <div class="text-wrapper-11">Notas</div>
+        <div class="overlap-group-2">
+          <div class="text-wrapper-12">Timer</div>
+          <div class="overlap-4">
+            <button class="button"><div class="text-wrapper-13">Iniciar</div></button>
+            <div class="div-wrapper"><div class="text-wrapper-14">Resetar</div></div>
+            <p class="text-wrapper-15">
+              Um temporizador Pomodoro simples para aumentar sua produtividade com ciclos de trabalho e descanso
+            </p>
+          </div>
+          <div class="frame-2"><div class="text-wrapper-16">00:00</div></div>
+        </div>
+        <p class="a-t-cnica-pomodoro">
+          A técnica Pomodoro aumenta a produtividade em até 25%, melhorando foco e reduzindo <br />procrastinação com
+          ciclos de 25 minutos de trabalho e 5 minutos de paus
+        </p>
+        <p class="text-wrapper-17">
+          Anote o que você conseguiu realizar em cada sessão. Isso ajuda a monitorar seu progresso ao longo do tempo.
+        </p>
+        <img class="Polygon_timer2.png" src="./img/Polygon_timer2.png" />
+        <div class="frame-3"></div>
+        <div class="rectangle-2"></div>
       </div>
     </div>
   </body>
